hphp/test/zend/good/ext/pcre/tests/backtrack_limit.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (@preg_match_all('/\p{N}/', '0123456789') === false) {
    die("skip no support for \p support PCRE library");
}
}
