hphp/test/zend/bad/ext/pcre/tests/recursion_limit.php.skipif
<?php
if (@preg_match_all('/\p{N}/', '0123456789', $dummy) === false) {
	die("skip no support for \p support PCRE library");
}
?>